--- a/gdl_apps/DECA/deca_conf/model/neural_rendering/stargan_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/model/neural_rendering/stargan_cluster.yaml
@@ -2,11 +2,24 @@
 neural_renderer:
   class_: StarGAN
 
+  ### NEWER GENERATION, rendered mask, background from the input
+  # combined:
+   cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_23_22-33-47_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_combined_input_rend/config.yaml
+
+  # AffectNet
+  # cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_23_22-34-43_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_affectnet_input_rend/config.yaml
+
+  # DecaD
+  # cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_23_22-36-59_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_decad_input_rend/config.yaml
+
+
+  ### OLDER GENERATION
+
   # # trained on CelebAHQDataset, looks good but will mostly work only for frontal faces
   # cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_07_29_16-23-26_DualStarGAN_input-out_im_detail_SupRec_VGG_FR/config.yaml
   
   #this one looks good, trained on AffectNet
-  cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_06_14-55-12_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_hpf0.0_affectnet/config.yaml
+#  cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_06_14-55-12_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_hpf0.0_affectnet/config.yaml
 
   #this one looks good, trained on AffectNet
   #  cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_09_16-12-20_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_affectnet/config.yaml
