Add support for Emotion losses from different backbones - EmoLoss extensions and new classes. Add new, better StarGAN models into the config.
EmotionNet download scripts.

--- a/gdl_apps/DECA/deca_conf/model/neural_rendering/stargan.yaml
+++ b/gdl_apps/DECA/deca_conf/model/neural_rendering/stargan.yaml
@@ -4,7 +4,7 @@ neural_renderer:
 
   ### NEWER GENERATION, rendered mask, background from the input
   # combined:
-   cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_23_22-33-47_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_combined_input_rend/config.yaml
+  cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_23_22-33-47_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_combined_input_rend/config.yaml
 
   # AffectNet
   # cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_23_22-34-43_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_affectnet_input_rend/config.yaml
@@ -18,8 +18,8 @@ neural_renderer:
   # # trained on CelebAHQDataset, looks good but will mostly work only for frontal faces
   # cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_07_29_16-23-26_DualStarGAN_input-out_im_detail_SupRec_VGG_FR/config.yaml
   
-  #this one looks good, trained on AffectNet
-  cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_06_14-55-12_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_hpf0.0_affectnet/config.yaml
+#  #this one looks good, trained on AffectNet
+#  cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_06_14-55-12_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_hpf0.0_affectnet/config.yaml
 
   #this one looks good, trained on AffectNet
 #  cfg: /is/cluster/work/rdanecek/stargan-v2/experiments/2021_08_09_16-12-20_DualStarDecaGAN_input-image_detail_SupRec_VGG_FR_affectnet/config.yaml
