Synchronize configs with DECA release - changing the lip loss weight - changing the MRF weight

--- a/gdl_apps/DECA/deca_conf/data/datasets/coarse_data_desktop.yaml
+++ b/gdl_apps/DECA/deca_conf/data/datasets/coarse_data_desktop.yaml
@@ -4,8 +4,8 @@ data_class: DecaDataModule
 path: /home/rdanecek/Workspace/mount/scratch/face2d3d/
 training_datasets:
   - vggface2
-  - vox2
-#  - ethnicity # quality not good enough
+#  - vox2
+  - ethnicity # quality not good enough
 validation_datasets:
   - now-val
 #  - papers-val # won't load
@@ -15,6 +15,7 @@ testing_datasets:
   - now-val
 #  - papers-val # won't load
   - celeb-val
+  - aflw2000
 scale_min: 1.4
 scale_max: 1.8
 #scale_max: 2.
