--- a/gdl_apps/DECA/deca_conf/model/settings/coarse_pretrain.yaml
+++ b/gdl_apps/DECA/deca_conf/model/settings/coarse_pretrain.yaml
@@ -19,8 +19,10 @@ useWlmk: True
 #useWlmk: False
 #lmk_weight: 1e-4 # REALLY? this value is in the paper but seems awfully low
 lmk_weight: 1.0
-eyed: 1.0
-lipd: 0.1
+#eyed: 1.0
+#lipd: 0.1
+eyed: 0.5
+lipd: 0.5
 idw: 0.0
 exp_reg: 1e-4
 shape_reg: 1e-4
