--- a/gdl_apps/DECA/deca_conf/model/settings/default_detail_expdeca_emonet.yaml
+++ b/gdl_apps/DECA/deca_conf/model/settings/default_detail_expdeca_emonet.yaml
@@ -41,8 +41,10 @@ mode: detail
 resume_training: False # this loads a pretrained model
 
 lmk_weight: 1
-eyed: 1.0 # used only when train_coarse is true
-lipd: 0.1 # used only when train_coarse is true
+#eyed: 1.0 # used only when train_coarse is true
+#lipd: 0.1 # used only when train_coarse is true
+eyed: 0.5
+lipd: 0.5
 use_photometric: True # used only when train_coarse is true
 photow: 2
 idw: 0.12 # used only when train_coarse is true
@@ -53,7 +55,8 @@ exp_reg: 0.0001
 tex_reg: 0.0001
 light_reg: 12
 useConstraint: true
-mrfwr: 0.01
+#mrfwr: 0.01
+mrfwr: 0.05
 zregw: 0.005
 zdiffw: 0.005
 zsymw: 0.005
