Create a script to load pretraining done by me and: - continue training with possibly reconfigured settings (losses, neural rendering, ...) - error reporting and sanity checks when trying to finetune a model with different backbone - DECA upgradable to ExpDECA, also with sanity checks - FLAME paths reconfigured by default to a copy of FLAME in my scratch

--- a/gdl_apps/DECA/deca_conf/data/datasets/coarse_data_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/data/datasets/coarse_data_cluster.yaml
@@ -15,7 +15,7 @@ testing_datasets:
   - now-val
 #  - papers-val # won't load
   - celeb-val
-  - aflw2000
+#  - aflw2000
 scale_min: 1.4
 scale_max: 1.8
 #scale_max: 2.
