--- a/gdl_apps/DECA/deca_conf/deca_train_coarse_emonet_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_train_coarse_emonet_cluster.yaml
@@ -7,7 +7,7 @@ defaults:
   - model/neural_rendering : none
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
-  - learning/batching: single_gpu_coarse
+  - learning/batching: single_gpu_coarse_32gb
   - learning/callbacks: early_stopping
   - learning/logging: wandb
   - inout: cluster
