--- a/gdl_apps/DECA/deca_conf/deca_train_coarse_stargan_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_train_coarse_stargan_cluster.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - data/datasets: coarse_data
+  - data/datasets: coarse_data_cluster
   - data/augmentations: none
   - model/paths : cluster
   - model/settings : coarse_train
@@ -7,7 +7,7 @@ defaults:
   - model/neural_rendering : stargan_cluster
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
-  - learning/batching: single_gpu_coarse
+  - learning/batching: single_gpu_coarse_32gb
   - learning/callbacks: early_stopping
   - learning/logging: wandb
-  - inout: desktop
+  - inout: cluster
