--- a/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
@@ -7,7 +7,7 @@ defaults:
   - model/neural_rendering : stargan_cluster
   - model/flame_tex: bfm
   - learning/optimizer: finetune_adam_coarse
-  - learning/batching: single_gpu_detail
+  - learning/batching: single_gpu_detail_32gb
   - learning/callbacks: early_stopping
   - learning/logging: wandb
   - inout: desktop
