--- a/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/deca_train_detail_stargan_cluster.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - data/datasets: detail_data
+  - data/datasets: detail_data_cluster
   - data/augmentations: none
   - model/paths : cluster
   - model/settings : detail_train
