--- a/gdl_apps/EmoDECA/emodeca_conf/emodeca_coarse.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/emodeca_coarse.yaml
@@ -2,7 +2,8 @@ defaults:
   - data/datasets: affectnet_desktop
   - data/augmentations: none
 #  - model/paths : desktop
-  - model/settings : coarse_emodeca
+  - model/backbone : coarse_emodeca
+  - model/settings : vae_affectnet
 #  - model/sizes : default
 #  - model/neural_rendering : none
 #  - model/flame_tex: bfm_desktop
