--- a/gdl_apps/EmoDECA/emodeca_conf/model/settings/vae_affectnet.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/model/settings/vae_affectnet.yaml
@@ -1,13 +1,10 @@
 # @package model
-emodeca_type: EmoNetModule
-load_pretrained_emonet: False
 
 predict_expression: true
 predict_valence: true
 predict_arousal: true
+predict_AUs: false
 
-
-#continuous_va_balancing: none
 #continuous_va_balancing: 1d
 #continuous_va_balancing: 2d
 #continuous_va_balancing: expr
@@ -34,11 +31,6 @@ va_loss_scheme: shake
 #va_loss_scheme: norm
 #va_loss_scheme: none
 
-#exp_loss: cross_entropy
-#a_loss: mse_loss
-#v_loss: mse_loss
-#exp_loss: nll_loss
-##exp_loss: cross_entropy
 
 a_activation: none
 #a_activation: tanh
@@ -47,5 +39,6 @@ v_activation: none
 exp_activation: log_softmax
 #exp_activation: none
 
-expression_balancing: false
+AU_activation: none
 
+expression_balancing: false
