--- a/gdl_apps/EmoDECA/emodeca_conf/model/settings/vae_emonet_trainable.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/model/settings/vae_emonet_trainable.yaml
@@ -1,14 +1,12 @@
 # @package model
-emodeca_type: EmoCnnModule
-#backbone: resnet50
-backbone: vgg16
-load_pretrained: True
 
 
 predict_expression: true
 predict_valence: true
 predict_arousal: true
+predict_AUs: false
 
+#continuous_va_balancing: none
 #continuous_va_balancing: 1d
 #continuous_va_balancing: 2d
 #continuous_va_balancing: expr
@@ -35,6 +33,11 @@ va_loss_scheme: shake
 #va_loss_scheme: norm
 #va_loss_scheme: none
 
+#exp_loss: cross_entropy
+#a_loss: mse_loss
+#v_loss: mse_loss
+#exp_loss: nll_loss
+##exp_loss: cross_entropy
 
 a_activation: none
 #a_activation: tanh
