Add a few configs for AU training and run on the cluster.

--- a/gdl_apps/EmoDECA/emodeca_conf/model/settings/AU_emotionet_bce_weighted.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/model/settings/AU_emotionet_bce_weighted.yaml
@@ -29,8 +29,8 @@ predict_AUs: 12
 
 AU_loss:
 #  AU_bce : 1.0
-#  AU_bce_weighted : 1.0
-  AU_l1 : 1.0
+  AU_bce_weighted : 1.0
+#  AU_l1 : 1.0
 
 
 #va_loss_scheme: shake
