--- a/gdl_apps/EmoDECA/emodeca_conf/model/settings/AU_emotionet_bce.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/model/settings/AU_emotionet_bce.yaml
@@ -28,9 +28,9 @@ predict_AUs: 12
 #exp_loss: nll_loss
 
 AU_loss:
-#  AU_bce : 1.0
+  AU_bce : 1.0
 #  AU_bce_weighted : 1.0
-  AU_l1 : 1.0
+#  AU_l1 : 1.0
 
 
 #va_loss_scheme: shake
