--- a/gdl_apps/EmoDECA/emodeca_conf/data/datasets/affectnet_cluster.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/data/datasets/affectnet_cluster.yaml
@@ -1,4 +1,16 @@
 # @package data
+
+## OLD version of AffectNet, using their bounding boxes which are not the most suitable for DECA as they often
+## crop away whole or part of forehead.
+
+#dm = AffectNetDataModule(
+#         "/ps/project/EmotionalFacialAnimation/data/affectnet/",
+#         "/ps/scratch/rdanecek/data/affectnet/",
+#         processed_subfolder="processed_2021_Apr_05_15-22-18",
+#         mode="manual",
+#         scale=1.25)
+
+
 data_class: AffectNetDataModule
 input_dir: /ps/project/EmotionalFacialAnimation/data/affectnet
 #output_dir: /ps/scratch/rdanecek/data/affectnet/
