--- a/gdl_apps/EmoDECA/emodeca_conf/model/backbone/resnet50_cluster.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/model/backbone/resnet50_cluster.yaml
@@ -3,4 +3,5 @@ emodeca_type: EmoCnnModule
 backbone: resnet50
 #backbone: vgg19
 load_pretrained: True
-pretrained_weights: /ps/scratch/face2d3d/ringnetpp/eccv/data/resnet50_ft_weight.pkl
+#pretrained_weights: /ps/scratch/face2d3d/ringnetpp/eccv/data/resnet50_ft_weight.pkl
+pretrained_weights: /ps/scratch/rdanecek/FaceRecognition/resnet50_ft_weight.pkl
