Add a few experiments for the affectnet test.

--- a/gdl_apps/EmoDECA/emodeca_conf/learning/callbacks/early_stopping.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/learning/callbacks/early_stopping.yaml
@@ -1,4 +1,5 @@
 # @package learning
 early_stopping:
-  patience: 30
+#  patience: 30
+  patience: 10
 checkpoint_after_training: best # 'best' vs 'latest'
