--- a/gdl_apps/DECA/deca_conf/data/datasets/coarse_data_desktop.yaml
+++ b/gdl_apps/DECA/deca_conf/data/datasets/coarse_data_desktop.yaml
@@ -1,7 +1,7 @@
 # @package data
 data_class: DecaDataModule
-#path: /ps/scratch/face2d3d/
-path: /home/rdanecek/Workspace/mount/scratch/face2d3d/
+path: /ps/scratch/face2d3d/
+#path: /home/rdanecek/Workspace/mount/scratch/face2d3d/
 training_datasets:
   - vggface2
 #  - vox2
