--- a/gdl_apps/EmoDECA/emodeca_conf/model/backbone/coarse_emodeca.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/model/backbone/coarse_emodeca.yaml
@@ -14,7 +14,9 @@ use_detail_code: false
 deca_checkpoint: todo
 deca_cfg: todo
 deca_stage: todo
+mlp_norm_layer: BatchNorm1d
 num_mlp_layers: 4
-mlp_dimension_factor: 1
+#mlp_dimension_factor: 1
+mlp_dim: 2048
 finetune_deca: false
 
