--- a/gdl_apps/EmoDECA/emodeca_conf/model/backbone/coarse_emodeca_emonet.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/model/backbone/coarse_emodeca_emonet.yaml
@@ -28,6 +28,7 @@ deca_checkpoint: todo
 deca_cfg: todo
 deca_stage: todo
 num_mlp_layers: 4
-mlp_dimension_factor: 1
+#mlp_dimension_factor: 1
+mlp_dim: 2048
 finetune_deca: false
 
