EmoDECA code update for final paper training and testing.

--- a/gdl_apps/EmoDECA/emodeca_conf/emodeca_coarse_cluster.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/emodeca_coarse_cluster.yaml
@@ -13,5 +13,5 @@ defaults:
   - learning/logging: wandb
 #  - learning/logging: none
   - learning/training: default
-  - inout: desktop
+  - inout: cluster
 
