--- a/gdl_apps/EmoDECA/emodeca_conf/learning/batching/single_gpu_coarse.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/learning/batching/single_gpu_coarse.yaml
@@ -1,7 +1,7 @@
 # @package learning
 
 batch_size_train: 64
-batch_size_test: 1
+batch_size_test: 64
 batch_size_val: 64
 train_K: 1 # num pictures of an identity per batch
 val_K: 1 # num pictures of an identity per batch
@@ -12,4 +12,5 @@ test_K_policy: sequential
 
 #K_policy: sequential
 num_gpus: 1
-gpu_memory_min_gb: 14
+#gpu_memory_min_gb: 14
+gpu_memory_min_gb: 30
