--- a/gdl_apps/DECA/deca_conf/data/datasets/coarse_data_cluster_different_scaling.yaml
+++ b/gdl_apps/DECA/deca_conf/data/datasets/coarse_data_cluster_different_scaling.yaml
@@ -16,12 +16,15 @@ testing_datasets:
 #  - papers-val # won't load
   - celeb-val
 #  - aflw2000
+scale_min: 1.2
+scale_max: 1.6
 #scale_min: 1.4
 #scale_max: 1.8
 #scale_max: 2.
-scale_min: 2.0
-scale_max: 2.8
-trans_scale: 0.2
+#scale_min: 2.0
+#scale_max: 2.8
+#trans_scale: 0.2
+trans_scale: 0.1
 #trans_scale: 0.4
 n_train: 10000000
 #split_ratio: 0.8
