Add EmoMLP training for MGCNet and ExpNet results.

--- a/gdl_apps/EmoDECA/emodeca_conf/emodeca_coarse_cluster.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/emodeca_coarse_cluster.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - data/datasets: affectnet_cluster
+  - data/datasets: affectnet_cluster_emonet_cleaned
   - data/augmentations: none
 #  - model/paths : desktop
   - model/backbone : coarse_emodeca
