--- a/gdl_apps/EmoDECA/emodeca_conf/emoexpnet.yaml
+++ b/gdl_apps/EmoDECA/emodeca_conf/emoexpnet.yaml
@@ -1,9 +1,8 @@
 defaults:
   - data/datasets: affectnet_cluster_emonet_cleaned
   - data/augmentations: none
-  - +data.dataset_type: AffectNetEmoNetSplitModuleValTest
-  #  - model/paths : desktop
-  - model/backbone : swin
+#  - model/paths : desktop
+  - model/backbone : expnet
   - model/settings : vae_affectnet
 #  - model/sizes : default
 #  - model/neural_rendering : none
