--- a/gdl_apps/DECA/deca_conf/data/datasets/combo_decadetail_affectnet_cluster_emonet_cleaned.yaml
+++ b/gdl_apps/DECA/deca_conf/data/datasets/combo_decadetail_affectnet_cluster_emonet_cleaned.yaml
@@ -1,6 +1,8 @@
 # @package data
 data_class: CombinedDataModule
 data_classes: [DecaDataModule, AffectNetEmoNetSplitModule]
+data_class_weights: ["0.5", "0.5"]
+#data_class_weights: ["0.9", "0.1"]
 
 ## AffectNet params
 #data_class: AffectNetEmoNetSplitModule
@@ -23,7 +25,8 @@ ring_type: "augment"
 ring_size: 4
 
 drop_last: true
-sampler: uniform
+#sampler: uniform
+sampler: balanced_expr
 use_gt: false
 
 
