--- a/gdl_apps/DECA/deca_conf/model/paths/cluster.yaml
+++ b/gdl_apps/DECA/deca_conf/model/paths/cluster.yaml
@@ -2,6 +2,8 @@
 # paths
 topology_path: /ps/scratch/rdanecek/data/FLAME/geometry/head_template.obj
 fixed_displacement_path: /ps/scratch/rdanecek/data/FLAME/geometry/fixed_uv_displacements/fixed_displacement_256.npy
+displacement_mask: /ps/scratch/rdanecek/data/FLAME/geometry/fixed_uv_displacements/EMOCA_mask_mouth2_nostrils_eyes__blur.npy
+#displacement_mask: /ps/scratch/rdanecek/data/FLAME/geometry/fixed_uv_displacements/EMOCA_mask_mouth2_nostrils_eyes.npy
 flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl
 flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embedding.npy
 face_mask_path: /ps/scratch/rdanecek/data/FLAME/mask/uv_face_mask.png
