--- a/gdl_apps/EMOCA/emoca_conf/data/datasets/data_desktop_all.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/data/datasets/data_desktop_all.yaml
@@ -1,5 +1,5 @@
 # @package data
-data_class: EmotionDataModule
+data_class: AffWild2DataModule
 data_root: /home/rdanecek/Workspace/mount/scratch/rdanecek/data/aff-wild2/
 processed_subfolder: processed_2021_Jan_19_20-25-10
 num_workers: 6
