--- a/conda-environment_py37_cu11.yml
+++ b/conda-environment_py37_cu11.yml
@@ -8,7 +8,7 @@ channels:
   - defaults
 dependencies:
   - cudatoolkit=11.1.74
-  - ffmpeg=4.3.2
+  - ffmpeg=4.4.1
   - ffmpeg-python=0.2.0
   - itk=5.1.2
   - itkwidgets=0.32.0
@@ -18,7 +18,7 @@ dependencies:
   - jupyterlab_pygments=0.1.2
   - jupyterlab_server=1.2.0
   - jupyterlab_widgets=1.0.2
-  - libopencv=4.5.0
+  - libopencv=4.5.5
   - matplotlib-base=3.2.2
   - moviepy=1.0.1
   - multidict=5.1.0
@@ -26,10 +26,10 @@ dependencies:
   - ninja=1.10.2
   - notebook=6.3.0
   - numba=0.52.0
-  - opencv=4.5.0
+  - opencv=4.5.5
   - pandas=1.1.5
   - pip=21.2.4
-  - py-opencv=4.5.0
+  - py-opencv=4.5.5
   - python=3.7.12
   - python_abi=3.7
   - pytorch=1.9.1=py3.7_cuda11.1_cudnn8.0.5_0
@@ -48,7 +48,7 @@ dependencies:
   - yaml=0.2.5
   - yarl=1.6.3
   - pip:
-    - cython==0.29.21
+    - cython>=0.29.21
     - adabound>=0.0.5
     - addict==2.4.0
     - alabaster==0.7.12
@@ -102,9 +102,9 @@ dependencies:
     - omegaconf==2.0.6
     - onnx==1.10.2
     - onnxruntime-gpu==1.9.0
-    - opencv-contrib-python==4.5.1.48
-    - opencv-python==4.5.1.48
-    - opencv-python-headless==4.1.2.30
+    # - opencv-contrib-python==4.5.5.62
+    # - opencv-python==4.5.5.62
+    # - opencv-python-headless==4.5.5.62
     - opt-einsum==3.3.0
     - pathtools==0.1.2
     - pillow==8.1.2
@@ -117,12 +117,12 @@ dependencies:
     - pydeprecate==0.3.1
     - pyglet==1.5.11
     - PyOpengl==3.1.5
-    - # pyrender==0.1.39
+    # - # pyrender==0.1.39
     - python-slugify==5.0.2
     - python-speech-features==0.6
     - pytorch-lightning==1.4.9
-    - # pytorch3d==0.6.0
-    - # pytorch3d==0.6.1
+    # - # pytorch3d==0.6.0
+    # - # pytorch3d==0.6.1
     - pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py37_cu111_pyt191/download.html
     - pyzmq==22.0.3
     - scikit-sound==0.2.3
