--- a/conda-environment_py38_cu11.yml
+++ b/conda-environment_py38_cu11.yml
@@ -1,4 +1,4 @@
-name: work37_cu11_v2
+name: work38_cu11
 channels:
   - pytorch
   - fastai
@@ -32,18 +32,18 @@ dependencies:
   - pandas=1.1.5
   - pip=21.2.4
   # - py-opencv=4.5.5
-  - pytorch=1.9.1=py3.7_cuda11.1_cudnn8.0.5_0
-  - pyvista=0.26.1
-  - pyvistaqt=0.2.0
+  - pytorch=1.9.1=py38_cuda11.1_cudnn8.0.5_0
+  - pyvista>=0.26.1
+  - pyvistaqt>=0.2.0
   - pywavelets=1.1.1
   - pyyaml=5.4.1
-  - qt=5.12.9
+  - qt>=5.12.9
   - resampy=0.2.2
   - scikit-image=0.17.2
   - scikit-learn=0.24.2
   - seaborn=0.11.0
   - tqdm=4.62.3
-  - vtk=9.0.1
+  - vtk>=9.0.1
   - wheel=0.37.0
   - yaml=0.2.5
   - yarl=1.6.3
@@ -82,12 +82,12 @@ dependencies:
     - importlib-resources==5.1.0
     - insightface==0.5.0
     - install==1.3.5
-    - itk-core==5.1.2
-    - itk-filtering==5.1.2
-    - itk-meshtopolydata==0.6.2
-    - itk-numerics==5.1.2
-    - itk-registration==5.1.2
-    - itk-segmentation==5.1.2
+    - itk-core>=5.1.2
+    - itk-filtering>=5.1.2
+    - itk-meshtopolydata>=0.6.2
+    - itk-numerics>=5.1.2
+    - itk-registration>=5.1.2
+    - itk-segmentation>=5.1.2
     - kaggle==1.5.12
     - keras-preprocessing==1.1.2
     - kornia==0.6.1
@@ -123,7 +123,7 @@ dependencies:
     - pytorch-lightning==1.4.9
     # - # pytorch3d==0.6.0
     # - # pytorch3d==0.6.1
-    - pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py37_cu111_pyt191/download.html
+    - pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py38_cu111_pyt191/download.html
     - pyzmq==22.0.3
     - scikit-sound==0.2.3
     - scikit-video==1.1.11
@@ -156,4 +156,4 @@ dependencies:
     - wrapt==1.12.1
     - yapf==0.30.0
     - youtube-dl==2021.6.6
-prefix: /home/rdanecek/anaconda3/envs/work37_cu11_v2
+prefix: /home/rdanecek/anaconda3/envs/work38_cu11
