--- a/conda-environment_py37_cu11_v2.yml
+++ b/conda-environment_py37_cu11_v2.yml
@@ -7,31 +7,32 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - cython=0.29.25
   - cudatoolkit=11.1.74
   - ffmpeg=4.4.1
   - ffmpeg-python=0.2.0
-  - itk=5.1.2
-  - itkwidgets=0.32.0
-  - jupyter_client=7.0.5
-  - jupyter_core=4.8.1
-  - jupyterlab=2.2.9
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_server=1.2.0
-  - jupyterlab_widgets=1.0.2
+  - itk>=5.1.2
+  - itkwidgets>=0.32.0
+  - jupyter_client>=7.0.5
+  - jupyter_core>=4.8.1
+  - jupyterlab>=2.2.9
+  - jupyterlab_pygments>=0.1.2
+  - jupyterlab_server>=1.2.0
+  - jupyterlab_widgets>=1.0.2
   - libopencv=4.5.5
-  - matplotlib-base=3.2.2
+  - matplotlib-base>=3.2.2
   - moviepy=1.0.1
   - multidict=5.1.0
-  - murmurhash=1.0.5
-  - ninja=1.10.2
+  # - murmurhash=1.0.5
+  # - ninja=1.10.2
   - notebook=6.3.0
   - numba=0.52.0
-  - opencv=4.5.5
+  # - opencv=4.5.5
   - pandas=1.1.5
-  - pip=21.2.4
-  - py-opencv=4.5.5
+  - pip>=21.2.4
+  # - py-opencv=4.5.5
   - python=3.7.12
-  - python_abi=3.7
+  # - python_abi=3.7
   - pytorch=1.9.1=py3.7_cuda11.1_cudnn8.0.5_0
   - pyvista=0.26.1
   - pyvistaqt=0.2.0
@@ -43,14 +44,14 @@ dependencies:
   - scikit-learn=0.24.2
   - seaborn=0.11.0
   - tqdm=4.62.3
-  - vtk=9.0.1
-  - wheel=0.37.0
-  - yaml=0.2.5
-  - yarl=1.6.3
+  - vtk>=9.0.1
+  - wheel>=0.37.0
+  - yaml>=0.2.5
+  - yarl>=1.6.3
   - pip:
-    - cython>=0.29.21
+    # - cython>=0.29.21
     - adabound>=0.0.5
-    - addict==2.4.0
+    # - addict==2.4.0
     - alabaster==0.7.12
     - albumentations==1.0.2
     - antlr4-python3-runtime==4.8
