--- a/conda-environment_py38_cu11.yml
+++ b/conda-environment_py38_cu11.yml
@@ -12,14 +12,14 @@ dependencies:
   - cudatoolkit=11.1.74
   - ffmpeg=4.4.1
   - ffmpeg-python=0.2.0
-  - itk=5.1.2
-  - itkwidgets=0.32.0
+  - itk>=5.1.2
+  - itkwidgets>=0.32.0
   - jupyter_client=7.0.5
   - jupyter_core=4.8.1
   - jupyterlab=2.2.9
-  - jupyterlab_pygments=0.1.2
-  - jupyterlab_server=1.2.0
-  - jupyterlab_widgets=1.0.2
+  - jupyterlab_pygments>=0.1.2
+  - jupyterlab_server>=1.2.0
+  - jupyterlab_widgets>=1.0.2
   - libopencv=4.5.5
   - matplotlib-base=3.2.2
   - moviepy=1.0.1
