--- a/conda-environment_py36_cu11_ubuntu_v2.yml
+++ b/conda-environment_py36_cu11_ubuntu_v2.yml
@@ -1,4 +1,4 @@
-name: work37_cu11_v2
+name: work36_cu11
 channels:
   - pytorch
   - fastai
@@ -7,7 +7,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - cython=0.29.25
+  # - cython
   - cudatoolkit=11.1.74
   - ffmpeg=4.4.1
   - ffmpeg-python=0.2.0
@@ -19,32 +19,31 @@ dependencies:
   - jupyterlab_pygments>=0.1.2
   - jupyterlab_server>=1.2.0
   - jupyterlab_widgets>=1.0.2
-  - libopencv=4.5.5
+  # - libopencv=4.5.5
   - matplotlib-base>=3.2.2
   - moviepy=1.0.1
   - multidict=5.1.0
-  # - murmurhash=1.0.5
-  # - ninja=1.10.2
+  - murmurhash=1.0.5
+  - ninja=1.10.2
   - notebook=6.3.0
-  - numba=0.52.0
+  - numba>=0.52.0
   # - opencv=4.5.5
-  - pandas=1.1.5
-  - pip>=21.2.4
   # - py-opencv=4.5.5
-  - python=3.7.12
-  # - python_abi=3.7
-  - pytorch=1.9.1=py3.7_cuda11.1_cudnn8.0.5_0
-  - pyvista=0.26.1
-  - pyvistaqt=0.2.0
-  - pywavelets=1.1.1
-  - pyyaml=5.4.1
-  - qt=5.12.9
+  - pandas>=1.1.5
+  - pip>=21.2.4
+  - python=3.6
+  - pytorch=1.9.1=py3.6_cuda11.1_cudnn8.0.5_0
+  - pyvista>=0.26.1
+  - pyvistaqt>=0.2.0
+  - pywavelets>=1.1.1
+  - pyyaml>=5.4.1
+  - qt>=5.12.9
   - resampy=0.2.2
-  - scikit-image=0.17.2
-  - scikit-learn=0.24.2
+  - scikit-image>=0.17.2
+  - scikit-learn>=0.24.2
   - scikit-video>=1.1.11
   - seaborn=0.11.0
-  - tqdm=4.62.3
+  - tqdm>=4.62.3
   - vtk>=9.0.1
   - wheel>=0.37.0
   - yaml>=0.2.5
@@ -71,12 +70,10 @@ dependencies:
     - filelock==3.0.12
     - flatbuffers==1.12
     - freetype-py==2.2.0
-    - gast==0.3.3
     - gdown==4.2.1
     - gitdb==4.0.5
     - gitpython==3.1.11
     - google-pasta==0.2.0
-    - grpcio==1.32.0
     - hydra-core==1.0.5
     - imagesize==1.2.0
     - imgaug==0.4.0
@@ -94,11 +91,11 @@ dependencies:
     - kornia==0.6.1
     - lightning-bolts>=0.4.0
     - matplotlib==3.3.4
-    - mediapipe==0.8.9.1
+    - mediapipe
     - memory-profiler==0.58.0
     - mmcv==1.2.2
     - munch==2.5.0
-    # - numpy>=1.19.3
+    - numpy>=1.19.3
     - # nvdiffrast==0.2.7
     - omegaconf==2.0.6
     - onnx==1.10.2
@@ -124,7 +121,7 @@ dependencies:
     - pytorch-lightning==1.4.9
     # - # pytorch3d==0.6.0
     # - # pytorch3d==0.6.1
-    # - pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py37_cu111_pyt191/download.html
+    # - pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py36_cu111_pyt191/download.html
     - git+https://github.com/facebookresearch/pytorch3d.git@v0.6.0
     - pyzmq==22.0.3
     - scikit-sound==0.2.3
@@ -158,4 +155,4 @@ dependencies:
     - wrapt==1.12.1
     - yapf==0.30.0
     - youtube-dl==2021.6.6
-prefix: /home/rdanecek/anaconda3/envs/work37_cu11_v2
+prefix: /home/rdanecek/anaconda3/envs/work36_cu11
