--- a/requirements36_v2.txt
+++ b/requirements36_v2.txt
@@ -1,6 +1,4 @@
-#- cython>=0.29.21
 adabound>=0.0.5
-#- addict==2.4.0
 alabaster==0.7.12
 albumentations==1.0.2
 antlr4-python3-runtime==4.8
@@ -20,34 +18,32 @@ facenet-pytorch==2.5.1
 filelock==3.0.12
 flatbuffers==1.12
 freetype-py==2.2.0
-gast==0.3.3
 gdown==4.2.1
 gitdb==4.0.5
 gitpython==3.1.11
 google-pasta==0.2.0
-grpcio==1.32.0
 hydra-core==1.0.5
 imagesize==1.2.0
 imgaug==0.4.0
 importlib-resources==5.1.0
-insightface==0.5.0
+insightface==0.5
 install==1.3.5
-itk-core>=5.1.2
-itk-filtering>=5.1.2
-itk-meshtopolydata>=0.6.2
-itk-numerics>=5.1.2
-itk-registration>=5.1.2
-itk-segmentation>=5.1.2
+itk-core==5.1.2
+itk-filtering==5.1.2
+itk-meshtopolydata==0.6.2
+itk-numerics==5.1.2
+itk-registration==5.1.2
+itk-segmentation==5.1.2
 kaggle==1.5.12
 keras-preprocessing==1.1.2
 kornia==0.6.1
 lightning-bolts>=0.4.0
 matplotlib==3.3.4
-mediapipe==0.8.9.1
+mediapipe
 memory-profiler==0.58.0
 mmcv==1.2.2
 munch==2.5.0
-numpy>=1.19.3
+#- numpy>=1.19.3
 # nvdiffrast==0.2.7
 omegaconf==2.0.6
 onnx==1.10.2
@@ -67,24 +63,23 @@ pyasn1-modules==0.2.8
 pydeprecate==0.3.1
 pyglet==1.5.11
 PyOpengl==3.1.5
-#- # pyrender==0.1.39
+- # pyrender==0.1.39
 python-slugify==5.0.2
 python-speech-features==0.6
 pytorch-lightning==1.4.9
 #- # pytorch3d==0.6.0
 #- # pytorch3d==0.6.1
-git+https://github.com/facebookresearch/pytorch3d.git@v0.6.0
-# pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py37_cu111_pyt191/download.html
+pytorch3d -f https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py37_cu111_pyt191/download.html
 pyzmq==22.0.3
-scikit-sound==0.2.3
-scikit-video==1.1.11
+# scikit-sound==0.2.3
+#- scikit-video==1.1.11
 scipy==1.5.4
 sentry-sdk==0.19.2
 setuptools==54.2.0
 shapely==1.7.1
 shortuuid==1.0.1
 smmap==3.0.4
-smplx==0.1.26python
+smplx==0.1.26
 snowballstemmer==2.0.0
 soupsieve==2.3.1
 subprocess32==3.5.4
@@ -94,7 +89,7 @@ subprocess32==3.5.4
 text-unidecode==1.3
 #tf-estimator-nightly==2.5.0.dev2020120901
 #tf-nightly==2.5.0.dev20201210
-tensorflow==2.8.0
+tensorflow==2.5.0
 timm>=0.4.9
 torchaudio>=0.7.2
 torchfile==0.1.0
