--- a/conda-environment_py37_cu11_v2.yml
+++ b/conda-environment_py37_cu11_v2.yml
@@ -49,6 +49,7 @@ dependencies:
   - wheel>=0.37.0
   - yaml>=0.2.5
   - yarl>=1.6.3
+  - configargparse>=1.5.3
   - pip:
     - adabound>=0.0.5
     # - addict==2.4.0
@@ -135,7 +136,7 @@ dependencies:
     - shapely==1.7.1
     - shortuuid==1.0.1
     - smmap==3.0.4
-    - smplx==0.1.26
+    # - smplx==0.1.26
     - snowballstemmer==2.0.0
     - soupsieve==2.3.1
     - subprocess32==3.5.4
