Cleaning up - adding comments, deleting useless files or commented useless code.

--- a/gdl_apps/EMOCA/envs/deprecated/conda-environment_py36_cu11_ubuntu_deprecated.yml
+++ b/gdl_apps/EMOCA/envs/deprecated/conda-environment_py36_cu11_ubuntu_deprecated.yml
@@ -1,8 +1,8 @@
-name: work
+name: work_cu11
 channels:
-  - pytorch3d
-  - fastai
   - pytorch
+  - fastai
+  - nvidia
   - anaconda
   - conda-forge
   - defaults
@@ -27,12 +27,11 @@ dependencies:
   - brotlipy=0.7.0=py36h8f6f2f9_1001
   - bzip2=1.0.8=h7f98852_4
   - c-ares=1.17.2=h7f98852_0
-  - ca-certificates=2021.5.30=ha878542_0
+  - ca-certificates=2021.10.8=ha878542_0
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - cachetools=4.2.4=pyhd8ed1ab_0
   - cairo=1.16.0=h9f066cc_1006
-  - captum=0.4.0=0
   - catalogue=2.0.6=py36h5fab9bb_0
   - certifi=2021.5.30=py36h5fab9bb_0
   - cffi=1.14.3=py36h829019c_1
@@ -45,7 +44,7 @@ dependencies:
   - colorcet=2.0.6=pyhd8ed1ab_0
   - contextvars=2.4=py_0
   - cryptography=3.4.7=py36hb60f036_0
-  - cudatoolkit=11.0.221=h6bb024c_0
+  - cudatoolkit=11.1.74=h6bb024c_0
   - curl=7.71.1=he644dc0_8
   - cycler=0.10.0=py_2
   - cymem=2.0.5=py36hc4f0c31_2
@@ -61,7 +60,6 @@ dependencies:
   - entrypoints=0.3=pyhd8ed1ab_1003
   - enum34=1.1.10=py36h9f0ad1d_2
   - expat=2.4.1=h9c3ff4c_0
-  - fastai=2.1.3=py_0
   - fastcore=1.3.1=py_0
   - fastprogress=1.0.0=py_0
   - fastscript=1.0.0=0
@@ -252,8 +250,7 @@ dependencies:
   - python=3.6.11=h4d41432_2_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
   - python_abi=3.6=2_cp36m
-  - pytorch=1.7.0=py3.6_cuda11.0.221_cudnn8.0.3_0
-  - pytorch3d=0.5.0=py36_cu110_pyt170
+  - pytorch=1.9.1=py3.6_cuda11.1_cudnn8.0.5_0
   - pytz=2021.1=pyhd8ed1ab_0
   - pyu2f=0.1.5=pyhd8ed1ab_0
   - pyvista=0.26.1=py_0
@@ -292,7 +289,6 @@ dependencies:
   - tk=8.6.11=h27826a3_1
   - toml=0.10.2=pyhd8ed1ab_0
   - toolz=0.11.1=py_0
-  - torchvision=0.8.1=py36_cu110
   - tornado=6.1=py36h8f6f2f9_1
   - tqdm=4.62.3=pyhd8ed1ab_0
   - traitlets=4.3.3=pyhd8ed1ab_2
@@ -347,6 +343,8 @@ dependencies:
     - deepspeech-gpu==0.9.2
     - docker-pycreds==0.4.0
     - docutils==0.16
+    - dominate==2.6.0
+    - easydict==1.9
     - face-alignment==1.3.3
     - facenet-pytorch==2.5.1
     - filelock==3.0.12
@@ -362,24 +360,32 @@ dependencies:
     - imagesize==1.2.0
     - imgaug==0.4.0
     - importlib-resources==5.1.0
+    - insightface==0.5
     - itk-core==5.1.2
     - itk-filtering==5.1.2
     - itk-meshtopolydata==0.6.2
     - itk-numerics==5.1.2
     - itk-registration==5.1.2
     - itk-segmentation==5.1.2
+    - kaggle==1.5.12
     - keras-preprocessing==1.1.2
+    - kornia==0.6.1
+    - lightning-bolts==0.4.0
     - matplotlib==3.3.4
     - memory-profiler==0.58.0
     - mmcv==1.2.2
     - munch==2.5.0
     - numpy==1.19.5
+    - nvdiffrast==0.2.7
     - omegaconf==2.0.6
+    - onnx==1.10.2
+    - onnxruntime-gpu==1.9.0
     - opencv-python==4.5.1.48
     - opencv-python-headless==4.5.3.56
     - opt-einsum==3.3.0
     - pathtools==0.1.2
     - pillow==8.1.2
+    - prettytable==2.4.0
     - promise==2.3
     - protobuf==3.13.0
     - psbody-mesh==0.4
@@ -389,9 +395,11 @@ dependencies:
     - pyglet==1.5.11
     - pyopengl==3.1.5
     - pyrender==0.1.39
+    - python-slugify==5.0.2
     - python-speech-features==0.6
     - pytorch-lightning==1.4.9
-    - pyzmq==19.0.2
+    - pytorch3d==0.6.0
+    - pyzmq==22.0.3
     - scikit-sound==0.2.3
     - scipy==1.5.4
     - sentry-sdk==0.19.2
@@ -413,6 +421,7 @@ dependencies:
     - tb-nightly==2.5.0a20201210
     - tensorboard-data-server==0.6.1
     - tensorflow-estimator==2.3.0
+    - text-unidecode==1.3
     - tf-estimator-nightly==2.5.0.dev2020120901
     - tf-nightly==2.5.0.dev20201210
     - timm==0.4.9
@@ -420,10 +429,11 @@ dependencies:
     - torchfile==0.1.0
     - torchgeometry==0.1.2
     - torchmetrics==0.5.1
+    - torchvision==0.10.1
     - trimesh==3.6.18
     - wandb==0.10.30
     - watchdog==0.10.3
     - wrapt==1.12.1
     - yapf==0.30.0
     - youtube-dl==2021.6.6
-prefix: /home/rdanecek/anaconda3/envs/work
+prefix: /home/rdanecek/anaconda3/envs/work_cu11
