--- a/requirements36.txt
+++ b/requirements36.txt
@@ -1,3 +1,4 @@
+cython~=0.29.21
 adabound~=0.0.5
 addict~=2.4.0
 alabaster~=0.7.12
@@ -8,7 +9,6 @@ babel~=2.8.0
 chumpy~=0.70
 compress-pickle~=1.2.0
 configparser~=5.0.1
-cython~=0.29.21
 deepspeech-gpu~=0.9.2
 docker-pycreds~=0.4.0
 docutils~=0.16
@@ -30,12 +30,6 @@ imagesize~=1.2.0
 imgaug~=0.4.0
 importlib-resources~=5.1.0
 insightface~=0.5
-itk-core~=5.1.2
-itk-filtering~=5.1.2
-itk-meshtopolydata~=0.6.2
-itk-numerics~=5.1.2
-itk-registration~=5.1.2
-itk-segmentation~=5.1.2
 kaggle~=1.5.12
 keras-preprocessing~=1.1.2
 kornia~=0.6.1
@@ -45,7 +39,6 @@ memory-profiler~=0.58.0
 mmcv~=1.2.2
 munch~=2.5.0
 numpy~=1.19.5
-nvdiffrast~=0.2.7
 omegaconf~=2.0.6
 onnx~=1.10.2
 onnxruntime-gpu~=1.9.0
@@ -57,7 +50,6 @@ pillow~=8.1.2
 prettytable~=2.4.0
 promise~=2.3
 protobuf~=3.13.0
-psbody-mesh~=0.4
 psutil~=5.7.3
 pyasn1-modules~=0.2.8
 pydeprecate~=0.3.1
@@ -66,8 +58,6 @@ pyopengl~=3.1.5
 pyrender~=0.1.39
 python-slugify~=5.0.2
 python-speech-features~=0.6
-pytorch-lightning~=1.4.9
-pytorch3d~=0.6.0
 pyzmq~=22.0.3
 scikit-sound~=0.2.3
 scipy~=1.5.4
@@ -77,15 +67,6 @@ shapely~=1.7.1
 shortuuid~=1.0.1
 smmap~=3.0.4
 smplx~=0.1.26
-snowballstemmer~=2.0.0
-sphinx~=3.3.0
-sphinx-bootstrap-theme~=0.7.1
-sphinxcontrib-applehelp~=1.0.2
-sphinxcontrib-devhelp~=1.0.2
-sphinxcontrib-htmlhelp~=1.0.3
-sphinxcontrib-jsmath~=1.0.1
-sphinxcontrib-qthelp~=1.0.3
-sphinxcontrib-serializinghtml~=1.1.4
 subprocess32~=3.5.4
 tb-nightly~=2.5.0a20201210
 tensorboard-data-server~=0.6.1
@@ -99,6 +80,8 @@ torchfile~=0.1.0
 torchgeometry~=0.1.2
 torchmetrics~=0.5.1
 torchvision~=0.10.1
+pytorch-lightning~=1.4.9
+git+https://github.com/facebookresearch/pytorch3d.git@v0.6.0
 trimesh~=3.6.18
 wandb~=0.10.30
 watchdog~=0.10.3
