--- a/requirements36.txt
+++ b/requirements36.txt
@@ -55,7 +55,6 @@ pyasn1-modules~=0.2.8
 pydeprecate~=0.3.1
 pyglet~=1.5.11
 pyopengl~=3.1.5
-pyrender~=0.1.39
 python-slugify~=5.0.2
 python-speech-features~=0.6
 pyzmq~=22.0.3
@@ -70,10 +69,6 @@ smplx~=0.1.26
 subprocess32~=3.5.4
 tb-nightly~=2.5.0a20201210
 tensorboard-data-server~=0.6.1
-tensorflow-estimator~=2.3.0
-text-unidecode~=1.3
-tf-estimator-nightly~=2.5.0.dev2020120901
-tf-nightly~=2.5.0.dev20201210
 timm~=0.4.9
 torchaudio~=0.7.2
 torchfile~=0.1.0
@@ -81,7 +76,7 @@ torchgeometry~=0.1.2
 torchmetrics~=0.5.1
 torchvision~=0.10.1
 pytorch-lightning~=1.4.9
-git+https://github.com/facebookresearch/pytorch3d.git@v0.6.0
+pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.0
 trimesh~=3.6.18
 wandb~=0.10.30
 watchdog~=0.10.3
