--- a/conda-environment_py36_cu11_ubuntu.yml
+++ b/conda-environment_py36_cu11_ubuntu.yml
@@ -21,6 +21,8 @@ dependencies:
   - pip>=21.2.4
   - python=3.6
   - pytorch=1.9.1=py3.6_cuda11.1_cudnn8.0.5_0
+  - torchvision=0.10.1 
+  - torchaudio=0.9.1 
   - pywavelets>=1.1.1
   - pyyaml>=5.4.1
   - resampy=0.2.2
