--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,22 @@ results/
 #data/
 *.wandb_auth
 assets/
+*.png 
+*.jpg
+*.jpeg
+*.bmp 
+*.gif
+*.mp4
+*.avi
+*.mp3
+*.wav
+*.zip
+*.tar
+*.gz
+*.rar
+*.7z
+*.bz2
+*.xz
+*.tgz
+*.tar.gz
+*.tar.bz2
