--- a/gdl_apps/EMOCA/emoca_conf/model/settings/coarse_train_emica.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/settings/coarse_train_emica.yaml
@@ -7,6 +7,7 @@ expression_backbone: deca_clone
 #expression_backbone: emonet_static
 
 mica_model_path: 'assets/MICA/model/mica.tar'
+mica_preprocessing: False
 
 max_epochs: 3
 #max_epochs: 2 TODO: it seems 2 or maybe even less, like 1.5 is more than enough, verify this and then change the default
