Use wav2vec2 feature resampling for faceformer. Save checkpoints also based on the training loss.

--- a/gdl_apps/TalkingHead/talkinghead_conf/flameformer.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/flameformer.yaml
@@ -7,15 +7,16 @@ defaults:
   # - model/neural_rendering : none
   # - model/flame_tex: bfm_desktop
   # - model/audio@model/audio: avhubert
-  - model/audio@model/audio: wav2vec2
+  # - model/audio@model/audio: wav2vec2
+  - model/audio@model/audio: wav2vec2_resampled
   # - model/audio@model/audio: hubert
   # - model/face@model/face: flame
   # - model/face@model/face: full_space
   - model/settings: faceformer
   - model/sequence_encoder@model/sequence_encoder: linear
   - model/sequence_decoder@model/sequence_decoder: flameformer
-  # - model/output@model/output: exp_jaw
-  - model/output@model/output: vertices
+  - model/output@model/output: exp_jaw
+  # - model/output@model/output: vertices
   - learning/losses: vertices
   - learning/optimizer: adam
   - learning/batching@learning/batching: default
