--- a/gdl_apps/TalkingHead/talkinghead_conf/model/audio/wav2vec2_resampled_trainable.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/audio/wav2vec2_resampled_trainable.yaml
@@ -1,8 +1,8 @@
 # @package model 
 type: wav2vec2
 model_specifier: "facebook/wav2vec2-base-960h" 
-trainable: false
+trainable: true
 with_processor: false
-model_expected_fps: False
-target_fps: False
+model_expected_fps: 50
+target_fps: 30
 freeze_feature_extractor: true
