Implement rotation velocity loss. Better experiment naming

--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/exp_only.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/exp_only.yaml
@@ -11,3 +11,13 @@ metrics:
     weight: 1. 
     rotation_rep: 6d
     metric: l2
+  vertex_velocity_loss: 
+    weight: 1.
+    metric: l2
+  exp_velocity_loss: 
+    weight: 1.
+    metric: l2
+  jaw_velocity_loss: 
+    weight: 1.    
+    rotation_rep: 6d
+    metric: l2
