--- a/gdl_apps/TalkingHead/talkinghead_conf/linear.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/linear.yaml
@@ -13,8 +13,7 @@ defaults:
   # - model/face@model/face: full_space
   - model/settings: faceformer
   - model/sequence_encoder@model/sequence_encoder: linear
-  # - model/sequence_decoder@model/sequence_decoder: bert
-  - model/sequence_decoder@model/sequence_decoder: bert_npe
+  - model/sequence_decoder@model/sequence_decoder: linear
   # - model/output@model/output: exp_jaw
   - model/output@model/output: vertices
   - learning/losses: vertices_only
