--- a/gdl_apps/EMOCA/emoca_conf/model/paths/cluster.yaml
+++ b/gdl_apps/EMOCA/emoca_conf/model/paths/cluster.yaml
@@ -9,6 +9,7 @@ flame_lmk_embedding_path: /ps/scratch/rdanecek/data/FLAME/geometry/landmark_embe
 face_mask_path: /ps/scratch/rdanecek/data/FLAME/mask/uv_face_mask.png
 face_eye_mask_path: /ps/scratch/rdanecek/data/FLAME/mask/uv_face_eye_mask.png
 pretrained_modelpath: /lustre/home/rdanecek/workspace/repos/DECA/data/deca_model.tar
+# pretrained_modelpath: /is/cluster/rdanecek/workspace/repos/DECA/data/deca_model.tar
 #pretrained_vgg_face_path: /ps/scratch/face2d3d/ringnetpp/eccv/data/resnet50_ft_weight.pkl
 pretrained_vgg_face_path: /ps/scratch/rdanecek/FaceRecognition/resnet50_ft_weight.pkl
 
