Hot crashfix in CelebVHQ

--- a/gdl_apps/TalkingHead/talkinghead_conf/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/flamebert_wild.yaml
@@ -19,7 +19,8 @@ defaults:
   # - model/output@model/output: vertices
   - learning/losses: vertices
   - learning/optimizer: adam
-  - learning/batching@learning/batching: default
+  # - learning/batching@learning/batching: default
+  - learning/batching@learning/batching: fixed_length
   # - learning/callbacks: early_stopping
   - learning/callbacks: none
   - learning/logging: wandb
