--- a/.gitmodules
+++ b/.gitmodules
@@ -32,5 +32,7 @@
 	url = https://github.com/facebookresearch/av_hubert
 [submodule "external/spectre"]
 	path = external/spectre
-	url = https://github.com/filby89/spectre 
+	url = https://github.com/radekd91/spectre 
+	branch = feature/batchVidSupport
+
 
