--- a/gdl_apps/TalkingHead/talkinghead_conf/flamebert.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/flamebert.yaml
@@ -7,7 +7,8 @@ defaults:
   # - model/neural_rendering : none
   # - model/flame_tex: bfm_desktop
   # - model/audio@model/audio: wav2vec2
-  - model/audio@model/audio: wav2vec2_resampled
+  # - model/audio@model/audio: wav2vec2_resampled
+  - model/audio@model/audio: wav2vec2_resampled_trainable
   # - model/audio@model/audio: hubert
   # - model/face@model/face: flame
   # - model/face@model/face: full_space
