--- a/gdl_apps/TalkingHead/talkinghead_conf/model/preprocessor/spectre_and_emorec.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/preprocessor/spectre_and_emorec.yaml
@@ -9,9 +9,10 @@ preprocessors:
   - spectre:
       type: spectre
       return_vis: False
-    #   return_vis: True
+      # return_vis: True
       render: False
-    #   render: True
+      # render: True
+      with_global_pose: False
 
       # paths
       flame_model_path: /ps/scratch/rdanecek/data/FLAME/geometry/generic_model.pkl
