--- a/gdl_apps/TalkingHead/talkinghead_conf/model/preprocessor/emoca_and_emorec.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/preprocessor/emoca_and_emorec.yaml
@@ -11,4 +11,6 @@ preprocessors:
       model_name: EMOCA
       stage: detail 
       with_global_pose: False
+      average_shape_decode: True
+      
 
