--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/celebvhq_no_occlusion.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/celebvhq_no_occlusion.yaml
@@ -12,7 +12,7 @@ face_detector: mediapipe
 face_detector_threshold: 0.05
 # landmarks_from: sr_res
 
-include_processed_audio: True
+include_processed_audio: False
 include_raw_audio: True
 preload_videos: False
 inflate_by_video_size: False
