--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/batching/fixed_length.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/batching/fixed_length.yaml
@@ -23,6 +23,6 @@ batch_size_test: 1
 
 #K_policy: sequential
 num_gpus: 1
-gpu_memory_min_gb: 24
-gpu_memory_max_gb: 38
+gpu_memory_min_gb: 30
+# gpu_memory_max_gb: 60
 log_every_n_steps: 10
