--- a/gdl_apps/TalkingHead/talkinghead_conf/model/audio/wav2vec2_SER_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/model/audio/wav2vec2_SER_wild.yaml
@@ -1,6 +1,8 @@
 # @package model 
 type: wav2vec2SER
 model_specifier: "superb/wav2vec2-base-superb-er" 
+# model_specifier: "ehcalabres/wav2vec2-lg-xlsr-en-speech-emotion-recognition" 
+# model_specifier: "harshit345/xlsr-wav2vec-speech-emotion-recognition" 
 trainable: false
 with_processor: false
 model_expected_fps: 50
