--- a/requirements38.txt
+++ b/requirements38.txt
@@ -70,4 +70,6 @@ youtube-dl~=2021.6.6
 mediapipe==0.8.10 
 plotly==5.8.0 
 librosa==0.9.2
+h5py==3.7.0
+hickle==5.0.2
 # pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@v0.6.0
