Dispelling weird segfaults in pytorch optimizer step. In the end, no amount of code changes fixed it. Instead pytorch is bumped up to 1.12. and pytorch3d to 0.6.2 (because 0.6.0 wouldn't compile). Alternative 'beta' requirement files added.

--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/lrs3_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/lrs3_pseudo_gt.yaml
@@ -57,6 +57,7 @@ sampler: uniform
 split: "original"
 
 read_video: False
+# read_video: True
 # reconstruction_type: spectre
 reconstruction_type: emoca
 return_global_pose: False
