Emotion feature loading support

--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/lrs3_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/lrs3_pseudo_gt.yaml
@@ -63,3 +63,7 @@ reconstruction_type: spectre
 return_global_pose: False
 return_appearance: False
 average_shape_decode: True
+
+
+emotion_type: resnet50
+return_emotion_feature: False
