Padding with zeros when reconstructions / emotions shorter than desired. Disabling invalid first and last frames (if any)

--- a/gdl_apps/TalkingHead/talkinghead_conf/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/flamebert_wild.yaml
@@ -17,8 +17,8 @@ defaults:
   - model/sequence_decoder@model/sequence_decoder: flamebert_wild
   - model/output@model/output: exp_jaw
   # - model/output@model/output: vertices
-  - learning/losses: vertices
-  # - learning/losses: vertices_masked
+  # - learning/losses: vertices
+  - learning/losses: vertices_masked
   - learning/optimizer: adam
   # - learning/batching@learning/batching: default
   - learning/batching@learning/batching: fixed_length
