--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
@@ -45,12 +45,16 @@ ring_size: none
 drop_last: true
 training_sampler: uniform
 
-landmark_types: [mediapipe, fan]
-landmark_sources: [original, aligned]
+# landmark_types: [mediapipe, fan]
+# landmark_sources: [original, aligned]
+
+landmark_types: mediapipe
+landmark_sources: original
+
 segmentation_source: aligned
 
 # split: random_70_15_15
-split: random_by_identity_70_15
+split: random_by_identity_70_15_15
 
 train_subjects: []
 #   - FaceTalk_170728_03272_TA 
@@ -68,3 +72,16 @@ val_subjects: []
 test_subjects: []
 #   - FaceTalk_170809_00138_TA 
 #   - FaceTalk_170731_00024_TA 
+
+
+read_video: False
+# read_video: True
+reconstruction_type: spectre
+# reconstruction_type: emoca
+return_global_pose: False
+return_appearance: False
+average_shape_decode: True
+
+
+emotion_type: resnet50
+return_emotion_feature: False
