Implement a renderer for the FaceFormer that can render faceformer batches in fixed views. Implement emotion feature loss for FaceFormer on the rendered images Add corresponding config files.

--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
@@ -79,7 +79,8 @@ read_video: False
 reconstruction_type: spectre
 # reconstruction_type: emoca
 return_global_pose: False
-return_appearance: False
+# return_appearance: False
+return_appearance: True
 average_shape_decode: True
 
 
