Add support for feeding in GT from potentially more reconstruction methods (one of them is primary). Extend the dataset and DM classes accordingly. Extend preprocessors accordingly. Move from repeat to expand to save memory.

--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/mead_pseudo_gt.yaml
@@ -76,8 +76,11 @@ test_subjects: []
 
 read_video: False
 # read_video: True
-reconstruction_type: spectre
+# reconstruction_type: spectre
 # reconstruction_type: emoca
+reconstruction_type: [spectre, emoca] # if more, the first one is primary
+# reconstruction_type: [emoca, spectre]
+
 return_global_pose: False
 # return_appearance: False
 return_appearance: True
