--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked.yaml
@@ -11,6 +11,8 @@ losses:
     emo_feat_loss: mse_loss
     trainable: false 
     normalize_features: false 
+    target_method_image: emoca
+    mask_invalid: mediapipe_landmarks # frames with invalid mediapipe landmarks will be masked for loss computation
 
 metrics: 
   exp_loss: 
