--- a/gdl_apps/TalkingHead/talkinghead_conf/flamebert_wild.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/flamebert_wild.yaml
@@ -8,7 +8,8 @@ defaults:
   # - model/flame_tex: bfm_desktop
   # - model/audio@model/audio: avhubert
   # - model/audio@model/audio: wav2vec2
-  - model/audio@model/audio: wav2vec2_resampled_trainable_wild
+  - model/audio@model/audio: wav2vec2_resampled_trainable_wild 
+  # - model/audio@model/audio: wav2vec2_resampled_nontrainable_wild
   # - model/audio@model/audio: hubert
   # - model/face@model/face: flame
   # - model/face@model/face: full_space
