--- a/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/learning/losses/vertices_emo_masked.yaml
@@ -10,7 +10,10 @@ losses:
     # weight: 1.0
     # weight: 0.1
     # weight: 0.01
-    weight: 0.0001
+    # weight: 0.001
+    # weight: 0.0001
+    weight: 0.00001
+    # weight: 0.000001
     network_path: /is/cluster/work/rdanecek/emoca/emodeca/2021_11_09_05-15-38_-8198495972451127810_EmoCnn_resnet50_shake_samp-balanced_expr_Aug_early
     emo_feat_loss: mse_loss
     trainable: false 
