--- a/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/lrs3_pseudo_gt.yaml
+++ b/gdl_apps/TalkingHead/talkinghead_conf/data/datasets/lrs3_pseudo_gt.yaml
@@ -19,6 +19,7 @@ face_detector_threshold: 0.05
 include_processed_audio: False
 include_raw_audio: True
 preload_videos: False
+# preload_videos: True
 inflate_by_video_size: False
 
 ring_type: none
